kubernetes/backend-deployment.yml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: backend-deployment
  labels:
    app: backend

spec:
  selector:
    matchLabels:
      app: backend-pods

  replicas: 3

  template:
    metadata:
      name: backend-pod
      labels:
        app: backend-pods
    spec:
      containers:
        - name: backend
          image: aymenkoched02/backend-helm-image:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 7001
              protocol: TCP
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
