kubernetes/backend-service.yml
apiVersion: v1

kind: Service

metadata:
  name: backend-service
  labels:
    app: backend

spec:
  type: NodePort
  ports:
    - port: 7001
      targetPort: 7001
      nodePort: 30002
      protocol: TCP
  selector:
    app: backend-pods
