kubernetes/frontend-service.yml
apiVersion: v1

kind: Service

metadata:
  name: frontend-service
  labels:
    app: frontend

spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30002
      protocol: TCP
  selector:
    app: frontend-pods
