kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: demo-ingress

spec:
  rules:
    - host: my-demo
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 7001

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
